# cloudrun-fastapi

./: .coveragerc  .dockerignore  .editorconfig  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  cloudbuild-template.yaml  cloudbuild.yaml  config.py  database.py  gunicorn_config.py  main.py  models.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  funding.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cloudrun-deploy.yaml  publish.yaml  test.yaml
actions/: auth.py  email.py  item.py  pubsub.py  user.py
alembic/: env.py  script.py.mako
cloudrunfastapi/: __init__.py  apienv.py  database.py  gunicorn_config.py  logger.py  main.py  models.py  types.py
crud/: item.py
docker/: .dockerignore
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cloudrun-cloudsql-deployment.md
models/: item.py  user.py
routers/: auth.py  default.py  email.py  item.py  pubsub.py  user.py
schemas/: auth.py  item.py  push_message.py  secrets_config.py  user.py
scripts/: docker-build.sh  docker-push.sh  docker-run.sh  format.sh  install.sh  lint.sh  run-alembic-upgrade-head.sh  run-dependencies.sh  run-gunicorn.sh  run-uvicorn.sh  set-local-env.sh  test-cov-html.sh  test.sh
tests/: conftest.py  helpers.py  mocks.py  test_auth.py  test_cloudrun_fastapi.py  test_db_rollback.py  test_general.py  test_gunicorn_config.py  test_healthcheck.py  test_items.py  test_logger.py  test_pubsub.py  test_users.py
v1/daos/: item.py  (+1 more)
(+49 files in other folders)
